fix: table shift

--- a/src/features/ticketInfo/TicketInfo.css
+++ b/src/features/ticketInfo/TicketInfo.css
@@ -1,4 +1,4 @@
-.tableHeader {
+.ticketTableHeader {
     color: rgba(255, 255, 255, 0.5);
     margin-left: 100px;
 }
